{{$NEXT}}

3.034     2024-10-04 10:26:33+02:00 Europe/Berlin

 - For device of type ASA that has interface not known by Netspoc,
   ACL of this interface is no longer removed during approve.
 - Migrated program 'approve.pl' from Perl to Go as 'do-approve'.
 - Migrated program 'missing-approve' from shell script to Go.
 - Program 'diamonds' is no longer a manually installed executable
   with SUID bit set, but a shell script calling 'sudo'.
 - Program 'newpolicy' no longer calls 'suid-newpolicy' but 'sudo-newpolicy'
   which is a shell script calling 'sudo'.
 - Modified error message for failed login.
   Option '--brief' of command 'do-approve' now only suppresses
   messages about failed logins, but not other timeouts.
 - Error message 'Authentication failed' is now also shown for ASA.
   Previously a timeout message was shown.

3.033     2024-09-06 10:31:32+02:00 Europe/Berlin

 - Migrated program 'drc3.pl' from Perl to Go.
   It is named 'drc' now.
   'drc3.pl' is still available as symbolic link to 'drc'.
   Programs 'drc-asa', 'drc-ios', 'drc-linux', 'drc-nsx', 'drc-pan-os'
   have been removed.
 - When running 'diamonds compare' or 'drc3.pl -C' and device has changed,
   then changes are written to file '*.cmp'.
 - Migrated program 'get-netspoc-approve-conf' from Perl to Go.
 - This warning from ASA is ignored now: 'crypto map entry will be incomplete'.

3.032     2024-08-14 11:55:20+02:00 Europe/Berlin

 - Fixed sorting of rules for NSX where rule references group
 - Fixed compare of rules for NSX where rule references external
   group, that is not known by Netspoc.
 - Fixed check of raw file for NSX:
   - Name of group must start with "Netspoc",
     but must not start with "Netspoc-g<NUM>".
   - Name of service must start with "Netspoc-raw".
 - Migrated approve for Linux from Perl to Go.

3.031     2024-07-25 11:31:12+02:00 Europe/Berlin

 - Fixed wrong seq num "0" in added "tunnel-group-map" from Netspoc.

3.030     2024-07-23 13:12:24+02:00 Europe/Berlin